dd exercise in chapter 6

--- a/IA-32AssemblyCode/Project_sample/Project.vcxproj
+++ b/IA-32AssemblyCode/Project_sample/Project.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <MASM Include="..\Chapter6\6.6.Finite.asm" />
+    <MASM Include="..\Chapter6\6.9.3.asm" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{4164AA65-1EF9-4E69-899B-D1BED776070B}</ProjectGuid>
